 */

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLogXXXXXX Version XXXXXX
  *  <b>New:</b>
  *  - Core:
  *   - Added new MIDIToneGenerator project
  *  - Library Applications:
  *   - Added new incomplete MIDIToneGenerator project
  *   - Added ability to write protect Mass Storage disk write operations from the host OS
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - Refactored Host mode Class Driver *_Host_ConfigurePipes() routines to be more space efficient when compiled
  *   - Added new *_ENUMERROR_PipeConfigurationFailed error codes for the *_Host_ConfigurePipes() routines
  *  - Library Applications:
  *   - Changed the XPLAINBridge software UART to use the regular CTC mode instead of the alternative CTC mode
  *     via the Input Capture register, to reduce user confusion
  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - Fixed broken USBFOO board drivers due to missing BOARD_USBFOO define
  *   - Fixed HID host class driver incorrectly binding to HID devices that do not have an OUT endpoint
  *  - Library Applications:
  *   - Fixed Benito project discarding incoming data from the USB virtual serial port when the USART is busy
  *   - Fixed broken DFU bootloader, added XPLAIN support for bootloader start when XCK jumpered to ground
  *   - Fixed broken HID_REQ_GetReport request handler in the Low Level GenericHID demo
  *
  *  \section Sec_ChangeLog101122 Version 101122
  *  <b>New:</b>
  *  - Core:
  *    - Added new SCSI_ASENSE_NOT_READY_TO_READY_CHANGE constant to the Mass Storage class driver, to indicate when a previously
  *      not ready removable medium has now become ready for the host's use (thanks to Martin Degelsegger)
  *    - Moved the Pipe and Endpoint stream related code to two new USB library core source files EndpointStream.c and PipeStream.c
  *    - Added new USB_Device_GetFrameNumber() and USB_Host_GetFrameNumber() functions to retrieve the current USB frame number